// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Component render() when active should render the Label without text and with children if active 1`] = `
<div
  className="label--hide"
>
  <span
    className="label__text"
    onClick={[Function]}
  />
</div>
`;

exports[`Label Component render() when not active should render the Label with text and without children if not active 1`] = `
<div
  className="label--hide"
>
  <span
    className="label__text"
    onClick={[Function]}
  >
    foo
  </span>
</div>
`;
